@startuml
class IcrObject <<partial>> {
}
class IcrObjectCore {
    + Key : string <<get>>
    + Name : string <<get>>
    - Reconst(attr_str:string) : IcrAttributes
    + IcrObjectCore(key:string)
    - _recipeIndex : int = 0
    + RecipeIndex : int <<get>> <<set>>
    + <<override>> ToString() : string
}
class IcrObjectCores {
    + IcrObjectCores()
    # <<override>> GetKeyForItem(item:IcrObjectCore) : string
}
class "IEnumerable`1"<T> {
}
class "KeyedCollection`2"<T1,T2> {
}
IcrObject +-- IcrObjectCore
IcrObjectCore --> "Image" Bitmap
IcrObjectCore --> "Attribute" IcrAttributes
IcrObjectCore --> "SelectedRecipe" Recipe
IcrObjectCore --> "calture" CultureInfo
IcrObjectCore --> "Keys<string>" "IEnumerable`1"
IcrObject +-- IcrObjectCores
"KeyedCollection`2" "<string,IcrObjectCore>" <|-- IcrObjectCores
@enduml
